--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="image.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1>deepanth</h1>
+            <img src="Image.jpg" alt="Your Profile Picture" class="profile-picture">
+            <h1>Deepanth M</h1>
             <p>I am a Student</p>
         </div>
     </header>
@@ -169,7 +169,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 deepanath</p>
+        <p>&copy; 2025 Deepanath</p>
     </footer>
 
     <script>
